fix formatting on time control so it does not truncate on mobile

--- a/ui/resources/css/sparpi.css
+++ b/ui/resources/css/sparpi.css
@@ -20,6 +20,10 @@ html {
     max-width: 700px;
 }
 
+#time-ctl {
+    min-width: 65px;
+}
+
 .card-deck .card {
     min-width: 220px;
 }
